--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/pako": "^2.0.3",
+    "pako": "^2.1.0",
     "vector2d": "^3.0.0",
     "ws": "^8.17.0"
   }
