--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/pako": "^2.0.3",
     "pako": "^2.1.0",
+    "tasktimer": "^3.0.0",
     "vector2d": "^3.0.0",
     "ws": "^8.17.0"
   }
